Amend events pulling method from AggregateRoot